# appalma

./: .gitignore  DEV.md  README.md  find.sh  pyproject.toml  requirements.txt
app/: Home.py  README.md  home.py
app/pages/: 01_login.py  01_login_mini.py  02_local.py  03_browse.py  03_settings.py  04_browse.py  05_cca_tst.py  05_cca_tst2.py
appalma/: __init__.py  browse.py  cmd.py  login.py  maker.py  pages.py  settings.py  visuals.py
demo/: README.md
demo/app/pages/: 1_Login.py
