[build-system]
requires = ["setuptools>=42", "wheel", "twine", "build", "setuptools_scm[toml]>=8.2.0"]
build-backend = "setuptools.build_meta"

[project]
name = "appalma"
description = "A library of widgest for connecting to ssh with streamlit apps"
authors = [{name = "RSE team", email = "rachel.alcraft@icr.ac.uk"}]
dynamic = ["version"]

dependencies = [
    "pandas==2.2.3",
    "paramiko>=3.5.0",    
    "pyyaml",
    "streamlit",

]

[project.optional-dependencies]
test = [
    "pytest==7.4.4",
    "pytest-mock>=3.6.0",
    "coverage"
]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
appalma = ["*.py", "config/*.yaml"]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "node-and-date"
